@@ -15,6 +15,7 @@
   * Fixed a typo in the progress bar caused some decrements to increment
   * Fixed a few typos in lsl.correlator.uvUtils.computeUVTrack
   * Fixed a typo in the _spec.PPSDC2() function that caused it to die
+  * Fixed several heinous problems in sim.dp.pointSource()
 
 0.4.2
   * Fixed tbwSpectra.py to skip over non-TBW frames at the beginning of a TBW file
